Javascript OOP section finish

--- a/14-OOP/codingChallenges/c1/index.html
+++ b/14-OOP/codingChallenges/c1/index.html
@@ -4,13 +4,13 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <title>Object Oriented Programming (OOP) With JavaScript</title>
+    <title>Coding Challenge 1</title>
     <style>
       body {
         height: 100vh;
         display: flex;
         align-items: center;
-        background: linear-gradient(to top left, #28b487, #7dd56f);
+        background: linear-gradient(to top left, #333333, #292929);
       }
       h1 {
         font-family: sans-serif;
@@ -19,12 +19,13 @@
         width: 100%;
         padding: 30px;
         text-align: center;
-        color: white;
+        color: rgb(105, 105, 105);
       }
     </style>
     <script defer src="script.js"></script>
   </head>
   <body>
-    <h1>Object Oriented Programming (OOP) With JavaScript</h1>
+    <h1>Coding Challenge</h1>
   </body>
 </html>
+
